--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,33 +3,36 @@
 version: 2.1
 orbs:
   python: circleci/python@2
+
 jobs:
-  test-python:
-    # Install dependencies and run tests
+  build:
+    working_directory: ~/app
     docker:
-      - image: cimg/python:3.8-node
+      - image: cimg/base:2022.09
+        auth:
+          username: $DOCKERHUB_USERNAME
+          password: $DOCKERHUB_PASSWORD
     steps:
       - checkout
-      - python/install-packages
+      - setup_remote_docker:
+          docker_layer_caching: true
       - run:
-          name: Run tests
-#          command: pytest --junitxml=junit.xml || ((($? == 5)) && echo 'Did not find any tests to run.')
-          command: echo "working"
-      - store_test_results:
-          path: junit.xml
-  deploy:
-    # This is an example deploy job, not actually used by the workflow
-    docker:
-      - image: cimg/base:stable
-    steps:
-      # Replace this with steps to deploy to users
+          name: Build Docker image
+          command: |
+            TAG=0.1.$CIRCLE_BUILD_NUM
+            docker build -t $DOCKERHUB_USERNAME/weathertest:$TAG .
       - run:
-          name: deploy
-          command: '#e.g. ./deploy.sh'
-workflows:
-  build-and-test:
-    jobs:
-      - test-python
-    # - deploy:
-    #     requires:
-    #       - test-python
+          name: Reachability Test
+          command: |
+            if curl -s --head  --request GET "localhost" | grep "200 OK" > /dev/null; then
+                   echo "$site is UP"
+                else
+                   exit 0
+                fi
+      - run:
+          name: Push application Docker image
+          command: |
+#            TAG=0.1.$CIRCLE_BUILD_NUM
+            echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin
+            docker push $DOCKERHUB_USERNAME/circleci-new-docker-example:$TAG
+
