--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,5 +24,6 @@ jobs:
       - run:
           name: Push application Docker image
           command: |
+            TAG=0.1.$CIRCLE_BUILD_NUM
             docker push $DOCKERHUB_USERNAME/weathertest:$TAG
 
