--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,5 +25,6 @@ jobs:
           name: Push application Docker image
           command: |
             TAG=0.1.$CIRCLE_BUILD_NUM
+            echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin
             docker push $DOCKERHUB_USERNAME/weathertest:$TAG
 
