--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,11 @@ jobs:
       - run:
           name: Reachability Test
           command: |
-            echo "test"
+            if curl -s --head  --request GET "localhost" | grep "200 OK" > /dev/null; then
+               echo "$site is UP"
+            else
+               exit 0
+            fi
       - run:
           name: Push application Docker image
           command: |
