--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,9 +21,11 @@ jobs:
           command: |
             TAG=0.1.$CIRCLE_BUILD_NUM
             docker build -t $DOCKERHUB_USERNAME/weathertest:$TAG .
+
       - run:
           name: Reachability Test
           command: |
+            docker-compose up -d --build --scale web=3
             if curl -s --head  --request GET "localhost" | grep "200 OK" > /dev/null; then
                echo "$site is UP"
             else
