--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,26 +2,6 @@
 # Stacks detected: deps:python:.
 version: 2.1
 orbs:
-  datadog-static-analysis: datadog/datadog-static-analyzer-circleci-orb@1
-jobs:
-  run-static-analysis-job:
-    docker:
-      - image: cimg/node:current
-    steps:
-      - checkout
-      - datadog-static-analysis/analyze:
-          service: "my-service"
-          env: "ci"
-          site: datadoghq.com
-          cpu_count: 2
-          enable_performance_statistics: false
-workflows:
-  main:
-    jobs:
-      - run-static-analysis-job
-
-
-orbs:
   python: circleci/python@2
 
 jobs:
@@ -46,7 +26,7 @@ jobs:
           name: Reachability Test
           command: |
             TAG=0.1.$CIRCLE_BUILD_NUM
-            docker run -d $DOCKERHUB_USERNAME/weathertest:$TAG
+            docker run -d -p80:5000 $DOCKERHUB_USERNAME/weathertest:$TAG
             curl -s --head  --request GET "localhost" | grep "200 OK" > /dev/null
       - run:
           name: Push application Docker image
