--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,11 @@ jobs:
           command: |
             TAG=0.1.$CIRCLE_BUILD_NUM
             docker run -d -p80:5000 $DOCKERHUB_USERNAME/weathertest:$TAG
-            curl -s --head  --request GET "localhost" | grep "200 OK" > /dev/null
+            if curl -s --head  --request GET "localhost" | grep "200 OK" > /dev/null; then
+               echo "$site is UP"
+            else
+               exit 0
+            fi
       - run:
           name: Push application Docker image
           command: |
