--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,8 +3,6 @@
 version: 2.1
 orbs:
   python: circleci/python@2
-
-orbs:
   discord: antonioned/discord@0.1.0
 
 jobs:
@@ -38,11 +36,8 @@ jobs:
             echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin
             docker push $DOCKERHUB_USERNAME/weathertest:$TAG
 
-    discord/steps:
-      - checkout
-
       - discord/status:
           fail_only: false
           failure_message: "**${CIRCLE_USERNAME}**'s build: **${CIRCLE_JOB}** failed."
           success_message: "**${CIRCLE_USERNAME}** deployed api to prod."
-          webhook: https://discord.com/api/webhooks/1244983967401119865/P4IPNGFg3_4RQTTaWsw2V_jgHQCebrGeja3RbpC8ZFL3grxHF9pIt6q9A5QkgvRAfH2G
+          webhook: "${DISCORD_STATUS_WEBHOOK}"
