--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
             TAG=0.1.$CIRCLE_BUILD_NUM
             echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin
             docker push $DOCKERHUB_USERNAME/weathertest:$TAG
-            echo "$TOKEN" | docker login registry.gitlab.com/devops1771522 -u sbidarski --password-stdin
+            echo "$TOKEN" | docker login https://gitlab.com/devops1771522/weather/container_registry -u sbidarski --password-stdin
             docker push $DOCKERHUB_USERNAME/weathertest:$TAG
 
       - discord/status:
