--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
           command: |
             TAG=0.1.$CIRCLE_BUILD_NUM
             docker build -t $DOCKERHUB_USERNAME/weathertest:$TAG .
-
+            docker build -t https://gitlab.com/devops1771522/weather/weathertest:$TAG .
       - run:
           name: Reachability Test
           command: |
