--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,9 +35,9 @@ jobs:
           name: Push application Docker image
           command: |
             TAG=0.1.$CIRCLE_BUILD_NUM
-            echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin
-            docker push $DOCKERHUB_USERNAME/weathertest:$TAG
-            echo "$TOKEN" | docker login https://gitlab.com/devops1771522/weather/container_registry -u sbidarski --password-stdin
+#            echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin
+#            docker push $DOCKERHUB_USERNAME/weathertest:$TAG
+            echo "$TOKEN" | docker login https://gitlab.com/devops1771522/weather -u sbidarski --password-stdin
             docker push registry.gitlab.com/devops1771522/weathertest:$TAG
 
 #      - discord/status:
