--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
             TAG=0.1.$CIRCLE_BUILD_NUM
             docker build -t $DOCKERHUB_USERNAME/weathertest:$TAG .
             docker tag $DOCKERHUB_USERNAME/weathertest:$TAG registry.gitlab.com/devops1771522/weathertest:$TAG
-            docker images
+            docker build -t registry.gitlab.com/devops1771522/weather:$TAG .
 #            docker build -t gitlab.com/devops1771522/weather/weathertest:$TAG .
       - run:
           name: Reachability Test
@@ -36,7 +36,7 @@ jobs:
           command: |
             TAG=0.1.$CIRCLE_BUILD_NUM
             echo "$TOKEN" | docker login registry.gitlab.com -u sbidarski --password-stdin
-            docker push registry.gitlab.com/devops1771522/weathertest:$TAG
+            docker push registry.gitlab.com/devops1771522/weather:$TAG
 #            echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin
 #            docker push $DOCKERHUB_USERNAME/weathertest:$TAG
 
