--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ version: 2.1
 orbs:
   python: circleci/python@2
   discord: antonioned/discord@0.1.0
-  checkov: bridgecrew/checkov@x.y.z
+  checkov: bridgecrew/checkov@0.0.4
 
 jobs:
   build:
