--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
             TAG=0.1.$CIRCLE_BUILD_NUM
             echo "$TOKEN" | docker login registry.gitlab.com -u sbidarski --password-stdin
             docker push registry.gitlab.com/devops1771522/weather:$TAG
-            docker push registry.gitlab.com/devops1771522/weather:$latest
+            docker push registry.gitlab.com/devops1771522/weather:latest
 
       - discord/status:
           fail_only: false
