--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
         auth:
           username: $DOCKERHUB_USERNAME
           password: $DOCKERHUB_PASSWORD
-    executor: python
+#    executor: python
     steps:
       - checkout
       - setup_remote_docker:
@@ -41,11 +41,11 @@ jobs:
             docker push registry.gitlab.com/devops1771522/weather:$TAG
             docker push registry.gitlab.com/devops1771522/weather:latest
 
-#      - discord/status:
-#          fail_only: false
-#          failure_message: "**${CIRCLE_USERNAME}**'s build: **${CIRCLE_JOB}** failed."
-#          success_message: "**${CIRCLE_USERNAME}** deployed api to prod."
-#          webhook: "${DISCORD_STATUS_WEBHOOK}"
+      - discord/status:
+          fail_only: false
+          failure_message: "**${CIRCLE_USERNAME}**'s build: **${CIRCLE_JOB}** failed."
+          success_message: "**${CIRCLE_USERNAME}** deployed api to prod."
+          webhook: "${DISCORD_STATUS_WEBHOOK}"
 
       - checkov/scan:
           directory: "~/app"                            # tell checkov where is the directory you want to scan
