--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
           command: |
             TAG=0.1.$CIRCLE_BUILD_NUM
             docker run -d -p80:5000 --name app $DOCKERHUB_USERNAME/weathertest:$TAG
-            docker exec app python /app/test.py
+            docker exec app python test.py
       - run:
           name: Push application Docker image
           command: |
