--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ version: 2.1
 orbs:
   python: circleci/python@2
   discord: antonioned/discord@0.1.0
-  checkov: bridgecrew/checkov@0.0.4
+  bridgecrew: bridgecrew/bridgecrew@1.0.5
 
 jobs:
   build:
@@ -52,3 +52,19 @@ jobs:
           soft-fail: true                                     # do not fail the workflow in case vulnerabilities have found
           output: "cli"                                       # Report output format one of cli, json, junitxml
           api-key: "6bridgecrew-9example-2api-key1-demo9"     # use bridgecrew api key to create violations in bridgecrew app
+
+    checkov_tests:
+      executor: bridgecrew/default
+      steps:
+        - checkout
+        - bridgecrew/scan:
+            api-key-variable: BC_API_KEY
+            directory: ./terraform_files
+            output: json
+            soft-fail: true
+            
+workflows:
+  my-workflow:
+    jobs:
+      - build
+      - checkov_tests
