--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,15 +6,27 @@ orbs:
   discord: antonioned/discord@0.1.0
   bridgecrew: bridgecrew/bridgecrew@1.0.5
 
+workflows:
+  version: 2
+  build:
+    jobs:
+      - build
+      - checkov_tests
+  send-massage:
+    jobs:
+      - discord:
+          requires:
+            - build
+
 jobs:
   build:
+    executor: python
     working_directory: ~/app
     docker:
       - image: cimg/base:2022.09
         auth:
           username: $DOCKERHUB_USERNAME
           password: $DOCKERHUB_PASSWORD
-#    executor: python
     steps:
       - checkout
       - setup_remote_docker:
@@ -41,13 +53,6 @@ jobs:
             docker push registry.gitlab.com/devops1771522/weather:$TAG
             docker push registry.gitlab.com/devops1771522/weather:latest
 
-      - discord/status:
-          fail_only: false
-          failure_message: "**${CIRCLE_USERNAME}**'s build: **${CIRCLE_JOB}** failed."
-          success_message: "**${CIRCLE_USERNAME}** deployed api to prod."
-          webhook: "${DISCORD_STATUS_WEBHOOK}"
-
-
   checkov_tests:
     executor: bridgecrew/default
     steps:
@@ -57,12 +62,29 @@ jobs:
           directory: ./terraform_files
           output: json
           soft-fail: true
+    
+    discord/status:
+     fail_only: false
+     failure_message: "**${CIRCLE_USERNAME}**'s build: **${CIRCLE_JOB}** failed."
+     success_message: "**${CIRCLE_USERNAME}** deployed api to prod."
+     webhook: "${DISCORD_STATUS_WEBHOOK}"
 
-workflows:
-  my-workflow:
-    jobs:
-      - build
-      - checkov_tests
+
+#  checkov_tests:
+#    executor: bridgecrew/default
+#    steps:
+#      - checkout
+#      - bridgecrew/scan:
+#          api-key-variable: BC_API_KEY
+#          directory: ./terraform_files
+#          output: json
+#          soft-fail: true
+#
+#workflows:
+#  my-workflow:
+#    jobs:
+#      - build
+#      - checkov_tests
 
 
 
