--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ workflows:
 
 jobs:
   build:
-    executor: python
+    executor: circleci/python@2
     working_directory: ~/app
     docker:
       - image: cimg/base:2022.09
