--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ orbs:
   python: circleci/python@2
   discord: antonioned/discord@0.1.0
   bridgecrew: bridgecrew/bridgecrew@1.0.5
+  terraform: circleci/terraform@3.0.0
 
 workflows:
   version: 2
@@ -65,19 +66,16 @@ jobs:
           soft-fail: true
 
 
-  test:
-    # only build the circleci branch for now
-    branches:
-      only:
-        - circleci
+  terratest:
     docker:
       # specify the version
-      - image: circleci/golang:1.10
-    working_directory: /go/src/github.com/robmorgan/terraform-rolling-deploys
+      - image: circleci/golang:1.14
+    working_directory: /go/src/terratest_poc
     steps:
       - checkout
-      - run: curl -L -s https://github.com/golang/dep/releases/download/v0.4.1/dep-linux-amd64 -o /go/bin/dep && chmod +x /go/bin/dep
-      - run: curl -L -s https://releases.hashicorp.com/packer/1.2.3/packer_1.2.3_linux_amd64.zip -o /go/bin/packer.zip && unzip /go/bin/packer.zip -d /go/bin && chmod +x /go/bin/packer
-      - run: curl -L -s https://releases.hashicorp.com/terraform/0.11.7/terraform_0.11.7_linux_amd64.zip -o /go/bin/terraform.zip && unzip /go/bin/terraform.zip -d /go/bin && chmod +x /go/bin/terraform
-      - run: dep ensure -vendor-only
-      - run: make test
+      - terraform/install:
+          arch: amd64
+          os: linux
+          terraform_version: 0.14.2
+      - run: cd test && go get -v -d -t
+      - run: cd test && go test -v -timeout 30m 
