--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,5 +78,6 @@ jobs:
           arch: amd64
           os: linux
           terraform_version: 0.14.2
+      - run: pwd && ls -als    
       - run: cd test && go get -v -d -t
       - run: cd test && go test -v -timeout 30m 
