--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,13 +71,13 @@ jobs:
     docker:
       # specify the version
       - image: circleci/golang:1.14
-    working_directory: /
+    working_directory: /go/src/terratest_poc
     steps:
       - checkout
       - terraform/install:
           arch: amd64
           os: linux
           terraform_version: 0.14.2
-      - run: pwd && ls -als    
+      - run: cd go/src/terratest_poc
       #- run: go get -v -d -t
-      - run: go go/src/terratest_poc/test.go -v -timeout 30m 
+      - run: go test -v -timeout 30m 
